fixed scrollbar size for type 4

--- a/source/components/scrollbar/scrollbar.less
+++ b/source/components/scrollbar/scrollbar.less
@@ -53,7 +53,7 @@
 .scrollbar-type-4 {
     ::-webkit-scrollbar {
         width: 12px;
-        heigth: 12px;
+        height: 12px;
     }
 
     ::-webkit-scrollbar-track {
